# anti-vm

./: Cargo.toml  README.md  build-release.ps1  device ids.txt  resources.md
reference/: graphics cards.txt  graphics-cards.json  normal-vm-wmi-dump-results.txt  old-files.txt  registry.txt  resources.md  stealth-vmi-dump-results.txt  usb-visualizer.html  wmi-comparisons.txt  wmi-dump-results.txt  wmi-ps-tests.ps1
src/: activated.rs  auto_logon.rs  battery.rs  bluetooth_adapters.rs  displays.rs  first_logon_time.rs  flags.rs  graphics_card.rs  installed_apps.rs  local.rs  main.rs  microsoft_account.rs  os.rs  printers.rs  registry.rs  registry_macros.rs  sysinfo.rs  system_devices.rs  usb_devices.rs  util.rs  various_wmi.rs  wifi_adapters.rs
