cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "vm-detect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
nusb = "0.1.14"
windows = { version = "0.61.1", features = [
    "Foundation",
    "Globalization_DateTimeFormatting",
    "Win32",
    "Win32_System",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Devices",
    "Devices_WiFi",
    "Networking_Connectivity",
    "Graphics",
    "Graphics_Display",
    "Devices_Display",
    "Devices_Enumeration",
    "Devices_Power",
    "System_Power",
    "Devices_Usb",
    "Win32_Devices",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_Devices_PortableDevices",
    "Win32_System_WindowsProgramming"
] }
windows-collections = "0.2.0"
windows-core = "0.61.2"
windows-registry = "0.5.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
trim-paths = "all" # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.
